# TriviAnki

./: .gitignore  Makefile  pyproject.toml
models/: TriviAnki-Art.json  TriviAnki-Basic-Img.json  TriviAnki-Basic.json  TriviAnki-Cloze.json  TriviAnki-GreekAlphabet.json  TriviAnki-IO.json  TriviAnki-List.json  TriviAnki-SportsTeams.json  TriviAnki-UG-Australia.json  TriviAnki-UG-Canada.json  TriviAnki-UG-China.json  TriviAnki-UG-Country.json  TriviAnki-UG-Germany.json  TriviAnki-UG-Location.json  TriviAnki-UG-USA.json
notes/: Art.json  AustraliaSubdiv.json  Basic.json  BasicImg.json  CanadaSubdiv.json  ChinaSubdiv.json  Cloze.json  Country.json  GermanySubdiv.json  Greek.json  List.json  Location.json  Occlusion.json  Team.json  UsSubdiv.json
src/trivianki/: __init__.py
