[project]
name = "trivianki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eivind Fonn", email = "evfonn@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anki>=25.2.4",
    "click>=8.1.8",
    "pydantic>=2.11.4",
    "tqdm>=4.67.1",
    "typing-extensions<4.13",
]

[project.scripts]
trivianki = "trivianki:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 110
include = ["src/**/*.py", "src/**/*.pyi"]

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TCH",      # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlalchemy.orm.DeclarativeBase",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
plugins = ["pydantic.mypy"]
files = ["src/**/*.py"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src/stubs"
